--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                   <a href="https://github.com/davidrohweder" target="_blank" title="GitHub">
                       <i class="fab fa-github"></i>
                   </a>
-                  <a href="https://docs.google.com/document/d/1EU04hQPWG0iyhEk56kFgqIThPHSBe836O55PZ8QroIo/edit?usp=sharing" target="_blank" title="Resume">
+                  <a href="https://github.com/davidrohweder/davidrohweder.github.io/raw/master/resume/David%20Rohweder%20Resume.pdf" target="_blank" title="Resume">
                       <i class="far fa-file-alt"></i>
                   </a>
               </div>
@@ -357,17 +357,9 @@
                     <div class="resume-content">
                         <h3 class="mb-0">Scholarships</h3>
                         <ul class="fa-ul mb-0">
-                          <li>
-                            <i class="fa-li fa fa-trophy text-warning"></i>
-                            3<sup>st</sup>
-                            Place - Computer Programming - SkillsUSA Pennsylvannia State, 2019
-                          </li>
-                          <li>
-                            <i class="fa-li fa fa-trophy text-warning"></i>
-                            2<sup>st</sup>
-                            Place - Computer Programming - SkillsUSA Pennsylvannia State, 2018
-                        </li>
-                        </ul>
+                            <div>Outstanding Senior in Program</div>
+                            <div>Brenntag North America Outstanding Programmer Award</div>
+                            <div>Matthew A. Burkhart Memorial Scholarship</div>
                     </div>
                 </div>
 
@@ -376,13 +368,13 @@
                         <h3 class="mb-0">Other Awards</h3>
                         <ul class="fa-ul mb-0">
                             <li>
-                               <i class="fa-li fa fa-trophy text-warning"></i>
-                               OSHA 10 Hour General Industry Safety and Health Certification
-                            </li>
+                                <i class="fa-li fa fa-trophy text-warning"></i>
+                                1<sup>st</sup>
+                                Place - RACC Web Design Challenge
+                             </li>
                             <li>
                                <i class="fa-li fa fa-trophy text-warning"></i>
-                               1<sup>st</sup>
-                               Place - RACC Web Design Challenge
+                               OSHA 10 Hour General Industry Safety and Health Certification
                             </li>
                             <li>
                                <i class="fa-li fa fa-trophy text-warning"></i>
