--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="resume-content">
                       <h3 class="mb-0">Penny Helper   <a href="https://github.com/EIGpennyhelper" target="_blank" title="GitHub"><i class="fab fa-github"></i></a></h3>
-                      <div>Leveraged Github, </div>
+                      <div>Leanred how to manage time and meet milestones using tools such as Ghannt and Milestone charts</div>
+                      <div>Technically documented the code and documents to peers and supervisors</div>
+                      <div>Deployed software designed to mine cryptocurrency on users idle activity</div>
+                      <div>Streamlined the cryptourrency mining process for nonprofits benefit</div>
                   </div>
                   <div class="resume-date text-md-right">
                       <span class="text-primary">Ongoing maintenance and development</span>
@@ -125,16 +128,15 @@
                 <div class="resume-content">
                     <h3 class="mb-0">RACC Web Challenge</h3>
                     <div class="subheading mb-3"><a href="https://raccwebchallenge.com/" target="_blank">first place</a> team</div>
-                    <div>Designed and implemented a <a href="https://blue-bat.raccwebchallenge.com/" target="_blank">website</a> while cooperating with a team of 3 other students</div>
+                    <div>Designed and implemented a <a href="https://blue-bat.raccwebchallenge.com/" target="_blank">website</a> using limited resources</div>
                     <div>Managed client-contractor relationship with local company Jump Start Incubator</div>
                     <div>Leanred leadership, organization, time management, working with a diverse team</div>
-                    <div>Utilized powerful tools such as Wordpress, Adobe, and </div>
-       
+                    <div>Utilized powerful tools such as Wordpress, Adobe, and Slack</div>
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">Completed in 2019</span>
                 </div>
-            </div>
+              </div>
 
              <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
                 <div class="resume-content">
@@ -207,7 +209,6 @@
                       <div class="subheading mb-3">Expeditionary Intrest Group, Leesport PA</div>
                       <div>Architect and developer of Penny Helper software suit</div>
                       <div>Employed high level concepts, leveraged powerful tools such as Github, Visual Studio, and StackOverflow</div>
-                      <div>Streamlined the cryptourrency mining process for nonprofits</div>
                   </div>
                   <div class="resume-date text-md-right">
                       <span class="text-primary">November 2018 to Current</span>
