--- a/index.html
+++ b/index.html
@@ -357,10 +357,11 @@
                 <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="resume-content">
                         <h3 class="mb-0">Scholarships</h3>
-                        <ul class="fa-ul mb-0">
-                            <div>Outstanding Senior in Program</div>
-                            <div>Brenntag North America Outstanding Programmer Award</div>
-                            <div>Matthew A. Burkhart Memorial Scholarship</div>
+                        <ul>
+                            <li>Outstanding Senior in Program</li>
+                            <li>Brenntag North America Outstanding Programmer Award</li>
+                            <li>Matthew A. Burkhart Memorial Scholarship</li>
+                        </ul>
                     </div>
                 </div>
 
@@ -407,35 +408,35 @@
                       <div>Grand Canyon, Arizona</div>
                   </div>
                   <div class="col-sm-4">
-                      <img class="d-block w-100" src="img/skills_2.JPG.jpg" alt="Third slide">
+                      <img class="d-block w-100" src="img/skills_2.JPG" alt="Third slide">
                       <div>Skills Competition, 2018</div>
                   </div>
               </div>
               <div class="row mb-5">
                   <div class="col-sm-4">
-                      <img class="d-block w-100 interests-image" src="img/graducation_friends.PNG.jpg" alt="First slide">
+                      <img class="d-block w-100 interests-image" src="img/graducation_friends.PNG" alt="First slide">
                       <div>Graduation</div>
                   </div>
                   <div class="col-sm-4">
-                      <img class="d-block w-100" src="img/solo_paris.JPG.jpg" alt="Second slide">
+                      <img class="d-block w-100" src="img/solo_paris.JPG" alt="Second slide">
                       <div>Paris on AP Euro Trip</div>
                   </div>
                   <div class="col-sm-4">
-                      <img class="d-block w-100" src="img/newyork.JPG.jpg" alt="Third slide">
+                      <img class="d-block w-100" src="img/newyork.JPG" alt="Third slide">
                       <div>New York near Christmas</div>
                   </div>
               </div>
               <div class="row mb-5">
                   <div class="col-sm-4">
-                      <img class="d-block w-100 interests-image" src="img/rosenberger.PNG.jpg" alt="First slide">
+                      <img class="d-block w-100 interests-image" src="img/rosenberger.PNG" alt="First slide">
                       <div>Intern Celebration, Rosenberger</div>
                   </div>
                   <div class="col-sm-4">
-                      <img class="d-block w-100" src="img/prom.jpg" alt="Second slide">
+                      <img class="d-block w-100" src="img/" alt="Second slide">
                       <div>Prom 2019</div>
                   </div>
                   <div class="col-sm-4">
-                      <img class="d-block w-100" src="img/polo.jpg" alt="Third slide">
+                      <img class="d-block w-100" src="img/" alt="Third slide">
                       <div>Water Polo</div>
                   </div>
               </div>
