--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="resume-content">
                       <h3 class="mb-0">Penny Helper   <a href="https://github.com/EIGpennyhelper" target="_blank" title="GitHub"><i class="fab fa-github"></i></a></h3>
-                      <div>Leanred how to manage time and meet milestones using tools such as Ghannt and Milestone charts</div>
+                      <div>Leanred how to manage time and meet goals using tools such as Ghannt and Milestone charts</div>
                       <div>Technically documented the code and documents to peers and supervisors</div>
                       <div>Deployed software designed to mine cryptocurrency on users idle activity</div>
                       <div>Streamlined the cryptourrency mining process for nonprofits benefit</div>
@@ -163,6 +163,7 @@
                     <h3 class="mb-0">Penn State Uninversity</h3>
                     <div class="subheading mb-3">Bachelors of Computer Science</div>
                     <div>Commited to continual learning and development as a student and programmer</div>
+                    <div>Knowledge past CMPSCI 2 and Calc 2</div>
                     <div>GPA: 3.46</div>
                 </div>
                 <div class="resume-date text-md-right">
@@ -174,7 +175,9 @@
                 <div class="resume-content">
                     <h3 class="mb-0">Berks Career and Technology Center</h3>
                     <div class="subheading mb-3">Information Technology - Programming</div>
-                    <div>Software developer track</div>
+                    <div>Learned proper software development procedures and practices</div>
+                    <div>Emulated industry environments with team-based assignments and peer critiscm</div>
+                    <div>Hands on experience and learning working with computer hardware</div>
                     <div>Skills USA Member and Competer</div>
                 </div>
                 <div class="resume-date text-md-right">
@@ -186,7 +189,8 @@
                 <div class="resume-content">
                     <h3 class="mb-0">Governor Mifflin Senior High School</h3>
                     <div class="subheading mb-3"></div>
-                    <div>AP and Honors Classes</div>
+                    <div>Passed various AP tests and took numerous Honors Classes</div>
+                    <div>Participated in clubs such as Chess Club and Libraries Ready to Code</div>
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">Graduated in 2019</span>
