--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                       <div class="subheading mb-3">Rosenberger North America LLC, Akron PA</div>
                       <div>Performed computer repair tasks and deployment though MDT and SCCM</div>
                       <div>Learned network concepts such as DC, AD, RDP, VLANS, Tone Testing, RAID, EXSI</div>
-                      <div>Crated in depth documents for end users and team members</div>
+                      <div>Created in depth documents for end users and team members</div>
                       <div>Assisted in migration projects such as O365 & Domain</div>
                   </div>
                   <div class="resume-date text-md-right">
