--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                     <div class="subheading mb-3"></div>
                     <div>Passed various AP tests and took numerous Honors Classes</div>
                     <div>Participated in clubs such as Chess Club and Libraries Ready to Code</div>
+                    <div>Recieved Certificate of Excellence from Board of School Directors</div>
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">Graduated in 2019</span>
@@ -385,6 +386,14 @@
                                <i class="fa-li fa fa-trophy text-warning"></i>
                                Student of the Quarter - Berks Career and Technology Center
                            </li>
+                           <li>
+                            <i class="fa-li fa fa-trophy text-warning"></i>
+                            Pennsylvannia Skills Certificate for Advanced Level in Management Information Systems
+                        </li>
+                        <li>
+                            <i class="fa-li fa fa-trophy text-warning"></i>
+                            IC3 Digital Literacy Certification
+                        </li>
                         </ul>
                     </div>
                 </div>
