--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="resume-content">
-                      <h3 class="mb-0">Lead Developer</h3>
+                      <h3 class="mb-0">Independent Contractor</h3>
                       <div class="subheading mb-3">Expeditionary Intrest Group, Leesport PA</div>
                       <div>Architect and developer of Penny Helper software suit</div>
                       <div>Employed high level concepts, leveraged powerful tools such as Github, Visual Studio, and StackOverflow</div>
