--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   <span>I am </span><span class="txt-rotate" data-period="2000" data-rotate='[ "a creator.", "a developer.", "a student.", "a web designer.", "dependable.", "a programmer.", "a leader.", "adaptable." ]'></span>
               </h2>
               <div class="social-icons">
-                  <a href="#" title="LinkedIn">
+                  <a href="https://www.linkedin.com/in/david-rohweder-b293081a7" title="LinkedIn">
                       <i class="fab fa-linkedin-in"></i>
                   </a>
                   <a href="https://github.com/davidrohweder" target="_blank" title="GitHub">
