--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
 
               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="resume-content">
-                      <h3 class="mb-0">Grocery Clerk, Kenhorst PA</h3>
-                      <div class="subheading mb-3">Redner's Warehouse Markets</div>
+                      <h3 class="mb-0">Grocery Clerk</h3>
+                      <div class="subheading mb-3">Redner's Warehouse Markets, Kenhorst PA</div>
                       <div>Active role in customer service through assistance and communication</div>
                       <div>Meet deadlines while handling multiple responsibilities and misc tasks</div>
                   </div>
