--- a/index.html
+++ b/index.html
@@ -378,22 +378,10 @@
                                 1<sup>st</sup>
                                 Place - RACC Web Design Challenge
                              </li>
-                            <li>
-                               <i class="fa-li fa fa-trophy text-warning"></i>
-                               OSHA 10 Hour General Industry Safety and Health Certification
-                            </li>
-                            <li>
-                               <i class="fa-li fa fa-trophy text-warning"></i>
-                               Student of the Quarter - Berks Career and Technology Center
-                           </li>
-                           <li>
-                            <i class="fa-li fa fa-trophy text-warning"></i>
-                            Pennsylvannia Skills Certificate for Advanced Level in Management Information Systems
-                        </li>
-                        <li>
-                            <i class="fa-li fa fa-trophy text-warning"></i>
-                            IC3 Digital Literacy Certification
-                        </li>
+                            <li>OSHA 10 Hour General Industry Safety and Health Certification</li>
+                            <li>Student of the Quarter - Berks Career and Technology Center</li>
+                            <li>Pennsylvannia Skills Certificate for Advanced Level in Management Information Systems</li>
+                            <li>IC3 Digital Literacy Certification</li>
                         </ul>
                     </div>
                 </div>
