--- a/index.html
+++ b/index.html
@@ -402,11 +402,11 @@
 
               <div class="row mb-5">
                   <div class="col-sm-4">
-                      <img class="d-block w-100 interests-image" src="img/solo_racc.JPG.jpg" alt="First slide">
+                      <img class="d-block w-100 interests-image" src="img/solo_racc.JPG" alt="First slide">
                       <div>Presenting During The RACC Web Challenge</div>
                   </div>
                   <div class="col-sm-4">
-                      <img class="d-block w-100" src="img/group_grandc.jpeg" alt="Second slide">
+                      <img class="d-block w-100" src="img/grandcanyon.jpeg" alt="Second slide">
                       <div>Grand Canyon, Arizona</div>
                   </div>
                   <div class="col-sm-4">
