--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
                       <div>Intern Celebration, Rosenberger</div>
                   </div>
                   <div class="col-sm-4">
-                      <img class="d-block w-100" src="img/" alt="Second slide">
+                      <img class="d-block w-100" src="img/muytai.JPG" alt="Second slide">
                       <div>Prom 2019</div>
                   </div>
                   <div class="col-sm-4">
