--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                   </div>
                   <div class="col-sm-4">
                       <img class="d-block w-100" src="img/muytai.JPG" alt="Second slide">
-                      <div>Prom 2019</div>
+                      <div>Muy Tai Camp</div>
                   </div>
                   <div class="col-sm-4">
                       <img class="d-block w-100" src="img/" alt="Third slide">
