--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                     <div class="subheading mb-3">Bachelors of Computer Science</div>
                     <li>Commited to continual learning and development as a engineering student and programmer</li>
                     <li>Knowledge past Calculus 3, Advanced Python, and Advanced Java</li>
-                    <li>GPA: 3.58</li>
+                    <li>Deans List Recipient and GPA: 3.58</li>
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">Expected graduation in 2023</span>
