--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
                   <li>Exceptional ability to work and communicate and operate in a corpoate environment</li>
                   <li>Great writen and oral communication skills</li>
                   <li>Mature and passionate at teaching peers complex concepts</li>
+                  <li>Driven peronality determination and persistance</li>
               </ul>
 
           </div>
