--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="resume-content">
                       <h3 class="mb-0">Penny Helper   <a href="https://github.com/EIGpennyhelper" target="_blank" title="GitHub"><i class="fab fa-github"></i></a></h3>
-                      <li>Leanred how to manage time and meet goals using tools such as Ghannt and Milestone charts</li>
+                      <li>Learned how to manage time and meet goals using tools such as Ghannt and Milestone charts</li>
                       <li>Technically documented the code and documents to peers and supervisors</li>
                       <li>Deployed software designed to mine cryptocurrency on users idle periods</li>
                       <li>Streamlined the cryptourrency mining process for nonprofits benefit</li>
@@ -131,8 +131,8 @@
                     <div class="subheading mb-3"><a href="https://www.racc.edu/news/racc-web-design-contest-more-just-pretty-site" target="_blank">first place</a> team</div>
                     <li>Designed and implemented a <a href="https://www.racc.edu/news/racc-web-design-contest-more-just-pretty-site" target="_blank">website</a> using limited resources</li>
                     <li>Managed client-contractor relationship with local company Jump Start Incubator</li>
-                    <li>Leanred leadership, organization, time management, and coordinating with a diverse team</li>
-                    <li>Utilized powerful tools such as Wordpress, Adobe Creative Suit, and Slack</li>
+                    <li>Learned leadership, organization, time management, and coordinating with a diverse team</li>
+                    <li>Utilized powerful tools such as WordPress, Adobe Creative Suite, and Slack</li>
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">Completed in 2019</span>
@@ -142,8 +142,8 @@
              <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
                 <div class="resume-content">
                     <h3 class="mb-0">Local Businesses</h3>
-                    <li>Designed and created a <a href="https://ready2launchnow.com/" target="_blank">website</a> for local client in Berks, PA</li>
-                    <li>Currently designing a <a href="https://brunosoflititz.com/" target="_blank">website</a> for local client in Lititz, PA</li>
+                    <li>Designed and created a <a href="https://ready2launchnow.com/" target="_blank">website</a> for a local client in Berks, PA</li>
+                    <li>Currently designing a <a href="https://brunosoflititz.com/" target="_blank">website</a> for a local client in Lititz, PA</li>
                     <li>Gained knowledge on client-contractor relationships while practicing web development skills and meeting deadlines</li>
                 </div>
                 <div class="resume-date text-md-right">
@@ -162,9 +162,9 @@
 
             <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="resume-content">
-                    <h3 class="mb-0">Penn State Uninversity</h3>
+                    <h3 class="mb-0">Penn State UNIVERSITY</h3>
                     <div class="subheading mb-3">Bachelors of Computer Science</div>
-                    <li>Commited to continual learning and development as a engineering student and programmer</li>
+                    <li>Committed to continual learning and development as an engineering student and programmer</li>
                     <li>Knowledge past Calculus 3, Advanced Python, and Advanced Java</li>
                     <li>Deans List Recipient and GPA: 3.58</li>
                 </div>
@@ -178,9 +178,9 @@
                     <h3 class="mb-0">Berks Career and Technology Center</h3>
                     <div class="subheading mb-3">Information Technology - Programming</div>
                     <li>Learned proper software development procedures and practices</li>
-                    <li>Emulated industry environments with team-based assignments and peer critiscm</li>
-                    <li>Hands on experience and learning working with computer hardware</li>
-                    <li>Skills USA Member and Competer</li>
+                    <li>Emulated industry environments with team-based assignments and peer criticism</li>
+                    <li>Hands-on experience and learning working with computer hardware</li>
+                    <li>Skills USA Member and competitor</li>
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">Graduated in 2019</span>
@@ -195,7 +195,7 @@
                     <li>Passed various AP tests and took numerous Honors Classes</li>
                     <li>Participated in clubs such as Chess Club and Libraries Ready to Code where I helped teach elementary students the fundamentals of programming as a part of <a href="https://www.birds.cornell.edu/k12/feathered-friends/" target="_blank">Cornell's</a>
                         feathered friend’s project. The project was showed to even younger students to inspire them about the possibilities of coding</li>
-                    <li>Recieved Certificate of Excellence from Board of School Directors</li>
+                    <li>Received Certificate of Excellence from the Board of School Directors</li>
                     <li>Member of the track and field team</li>
                 </div>
                 <div class="resume-date text-md-right">
@@ -215,9 +215,9 @@
               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="resume-content">
                       <h3 class="mb-0">Independent Contractor</h3>
-                      <div class="subheading mb-3">Expeditionary Intrest Group, Leesport PA</div>
+                      <div class="subheading mb-3">Expeditionary INTEREST Group, Leesport PA</div>
                       <li>Architect and developer of Penny Helper software suit</li>
-                      <li>Employed high level concepts, leveraged powerful tools such as Github, Visual Studio, and StackOverflow</li>
+                      <li>Employed high-level concepts, leveraged powerful tools such as Github, Visual Studio, and StackOverflow</li>
                   </div>
                   <div class="resume-date text-md-right">
                       <span class="text-primary">November 2018 to Current</span>
@@ -232,7 +232,7 @@
                             Used tools such as SharePoint Migration Tool, SharePoint Designer, SharePoint Admin Portal, and A.D.</li>
                         <li>Built MDT Server, created DHCP Policies, and site Gold Images for computer imaging</li>
                         <li>Upgraded or replaced computer hardware to meet company standards</li>
-                        <li>Created in-depth technical procedures and docmentation</li>
+                        <li>Created in-depth technical procedures and documentation</li>
                         <li>Maintain ticket system to help resolve user issues or requests</li> 
                   </div>
                   <div class="resume-date text-md-right">
@@ -334,7 +334,7 @@
               <h3 class="mb-0">Technical  Skills</h3>
               <ul>
                   <li>In-depth knowledge of Git and Github</li>
-                  <li>Robust understanding of object oriented programming principles</li>
+                  <li>Robust understanding of object-oriented programming principles</li>
                   <li>Expert knowledge of essential utilities such as Visual Studio, Eclipse, PyCharm, WebStorm, and StackOverflow</li>
                   <li>Experience using PowerShell scripts in a corporate environment from A.D. to Office365</li> 
                   <li>Extensive knowledge of DOS coding for various activities and purposes</li>
@@ -343,18 +343,18 @@
                   <li>Proficency in Office365 Admin Portal on a Federated GCC Tenant. Previous experience with assigning licenses, 
                       changing mailbox permissions, creating MS Teams groups and therein adding/ Removing members, 
                       creating SharePoint Online Sites, and configuring Tenant org settings </li>
-                  <li>Experience with A.D. functions such as O.U. structures, Securtity and Distrubution Groups and User Objects 
+                  <li>Experience with A.D. functions such as O.U. structures, Security and Distribution Groups, and User Objects 
                     (created from scratch or from copying an existing object, resetting passwords, enabling accounts, 
-                    editing the atribute editor, adding or removing groups)</li>
+                    editing the attribute editor, adding or removing groups)</li>
               </ul>
 
-              <h3 class="mb-0">Personaility Traits</h3>
+              <h3 class="mb-0">PERSONALITY Traits</h3>
               <ul>
                   <li>Excellent ability to work well with others and independently as necessary</li>
-                  <li>Exceptional ability to work and communicate and operate in a corpoate environment</li>
-                  <li>Great writen and oral communication skills</li>
+                  <li>Exceptional ability to work and communicate and operate in a corporate environment</li>
+                  <li>Great written and oral communication skills</li>
                   <li>Mature and passionate at teaching peers complex concepts</li>
-                  <li>Driven peronality with determination and persistance</li>
+                  <li>Driven personality with determination and persistence</li>
               </ul>
 
           </div>
@@ -377,13 +377,13 @@
                              </li>
                              <li>
                                 <i class="fa-li fa fa-trophy text-warning"></i>
-                                2<sup>st</sup>
-                                Place - Computer Programming - SkillsUSA Pennsylvannia State, 2018
+                                2<sup>nd</sup>
+                                Place - Computer Programming - SkillsUSA Pennsylvania State, 2018
                             </li>
                           <li>
                             <i class="fa-li fa fa-trophy text-warning"></i>
-                            3<sup>st</sup>
-                            Place - Computer Programming - SkillsUSA Pennsylvannia State, 2019
+                            3<sup>rd</sup>
+                            Place - Computer Programming - SkillsUSA Pennsylvania State, 2019
                           </li>
                         </ul>
                     </div>
@@ -406,7 +406,7 @@
                         <h3 class="mb-0">Other Awards &amp; Certifications</h3>
                             <li>OSHA 10 Hour General Industry Safety and Health Certification</li>
                             <li>Student of the Quarter - Berks Career and Technology Center</li>
-                            <li>Pennsylvannia Skills Certificate for Advanced Level in Management Information Systems</li>
+                            <li>Pennsylvania Skills Certificate for Advanced Level in Management Information Systems</li>
                             <li>IC3 Digital Literacy Certification</li>
                         </ul>
                     </div>
@@ -420,7 +420,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
           <div class="w-100">
               <h2 class="mb-5">Interests</h2>
-              <p>Aside from being a software and web developer and a full time student in college, I have a variety of hobbies and activites that I do to pass the time.</p>
+              <p>Aside from being a software and web developer and a full-time student in college, I have a variety of hobbies and activities that I do to pass the time.</p>
               <p>Some of my other hobbies include exploring PA and the country, skateboarding, going to the beach, and watching MMA. I also enjoy spending my spare time working on small projects and staying up to date with the latest technologies in the industry.</p>
               <p>Below are some pictures capturing good memories and things that I enjoy!</p>
 
