--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                       <li>Learned how to manage time and meet goals using tools such as Ghannt and Milestone charts</li>
                       <li>Technically documented the code and documents to peers and supervisors</li>
                       <li>Deployed software designed to mine cryptocurrency on users idle periods</li>
-                      <li>Streamlined the cryptourrency mining process for nonprofits benefit</li>
+                      <li>Streamlined the cryptocurrency mining process for nonprofits benefit</li>
                   </div>
                   <div class="resume-date text-md-right">
                       <span class="text-primary">Ongoing maintenance and development</span>
