--- a/index.html
+++ b/index.html
@@ -462,8 +462,8 @@
                       <div>Muy Tai Camp</div>
                   </div>
                   <div class="col-sm-4">
-                      <img class="d-block w-100" src="img/" alt="Third slide">
-                      <div>TBD</div>
+                      <img class="d-block w-100" src="img/SisterMarriage.PNG" alt="Third slide">
+                      <div>Family at sisters wedding</div>
                   </div>
               </div>
           </div>
