--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="resume-content">
                     <h3 class="mb-0">Academic Projects</h3>
-                    <li>Created a virtual file disk network driver in C on a UNIX VM. Project implemented LRU Cache algorithm to make network system calls to the disk controller more efficent. </li>
+                    <li>Created a virtual file disk network driver in C on a UNIX VM. Project implemented LRU Cache algorithm to make network system calls to the disk controller more efficent.</li>
 
                 </div>
                 <div class="resume-date text-md-right">
@@ -153,6 +153,7 @@
              <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
                 <div class="resume-content">
                     <h3 class="mb-0">Local Businesses</h3>
+                    <h3 class="mb-0">Professional Website Creator   <a href="https://webstrive.net" target="_blank" title="WebStrive"></a></h3>
                     <li>Designed and created a <a href="https://ready2launchnow.com/" target="_blank">website</a> for a local client in Berks, PA</li>
                     <li>Currently designing a <a href="https://brunosoflititz.com/" target="_blank">website</a> for a local client in Lititz, PA</li>
                     <li>Gained knowledge on client-contractor relationships while practicing web development skills and meeting deadlines</li>
