--- a/index.html
+++ b/index.html
@@ -142,8 +142,10 @@
               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="resume-content">
                     <h3 class="mb-0">Academic Projects</h3>
+                    <div class="subheading mb-3">Linux File System Driver</div>
                     <li>Created a virtual file disk network driver in C on a UNIX VM. Project implemented LRU Cache algorithm to make network system calls to the disk controller more efficent.</li>
-
+                    <div class="subheading mb-3">Ecommerce - Nittany Market/div>
+                    <li>Built a Python and Flask ecommerce site from scratch, which allowed buyers to purchase products from sellers, sellers to publish products, buyers to navigate and search products, and more. </li>
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">Ongoing Developments</span>
