--- a/index.html
+++ b/index.html
@@ -113,6 +113,19 @@
               <h2 class="mb-5">Projects</h2>
 
               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="resume-content">
+                    <h3 class="mb-0">Academic Projects</h3>
+                    <div class="subheading mb-3">Linux File System Driver</div>
+                    <li>Created a virtual file disk network driver in C on a UNIX VM. Project implemented LRU Cache algorithm to make network system calls to the disk controller more efficent.</li>
+                    <div class="subheading mb-3">Ecommerce - Nittany Market/div>
+                    <li>Built a Python and Flask ecommerce site from scratch, which allowed buyers to purchase products from sellers, sellers to publish products, buyers to navigate and search products, and more. </li>
+                </div>
+                <div class="resume-date text-md-right">
+                    <span class="text-primary">Ongoing Developments</span>
+                </div>
+              </div>
+
+              <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                   <div class="resume-content">
                       <h3 class="mb-0">Penny Helper   <a href="https://github.com/EIGpennyhelper" target="_blank" title="GitHub"><i class="fab fa-github"></i></a></h3>
                       <li>Learned how to manage time and meet goals using tools such as Ghannt and Milestone charts</li>
@@ -136,19 +149,6 @@
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">Completed in 2019</span>
-                </div>
-              </div>
-
-              <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-                <div class="resume-content">
-                    <h3 class="mb-0">Academic Projects</h3>
-                    <div class="subheading mb-3">Linux File System Driver</div>
-                    <li>Created a virtual file disk network driver in C on a UNIX VM. Project implemented LRU Cache algorithm to make network system calls to the disk controller more efficent.</li>
-                    <div class="subheading mb-3">Ecommerce - Nittany Market/div>
-                    <li>Built a Python and Flask ecommerce site from scratch, which allowed buyers to purchase products from sellers, sellers to publish products, buyers to navigate and search products, and more. </li>
-                </div>
-                <div class="resume-date text-md-right">
-                    <span class="text-primary">Ongoing Developments</span>
                 </div>
               </div>
             
@@ -178,13 +178,14 @@
             <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="resume-content">
                     <h3 class="mb-0">Penn State UNIVERSITY</h3>
-                    <div class="subheading mb-3">Bachelors of Computer Science</div>
+                    <div class="subheading mb-3">Bachelors of Science, Computer Science</div>
                     <li>Committed to continual learning and development as an engineering student and programmer</li>
-                    <li>Mathematical skills through linear algebra and matrices, multivariable calculus, and statistics.</li>
-                    <li>Advanced programming knowledge of Python, Java, and C. </li>
-                    <li>Rigorous work done with data structures and algorithms such as graphs, heaps, divide and conquer, greedy algorithms, dynamic programming, linear programming, and NP-completeness through asymptotic analysis and proofs</li>
-                    <li>Currently learning lambda calculus and scheme, grammar, and scoping</li>
-                    <li>Multiple semester Deans List recipient with a GPA: 3.69</li>
+                    <li>Mathematical skills through linear algebra and matrices (particular skillset in matrix matrix multiplication), multivariable calculus, and statistics</li>
+                    <li>Advanced programming knowledge of Python (Flask framework as well), Java, and C / C++ </li>
+                    <li>Rigorous work done with data structures and algorithms such as graphs, heaps, divide and conquer, greedy algorithms, dynamic programming, linear programming, and analysis through proofs</li>
+                    <li>Experience solving Lambda Calculus and Scheme, Finate Automata (DFA, NFA, GNFA), Context Free Grammar / Pushdown Automata, and Turing Machines</li>
+                    <li>Knowledge and interest in parallel, distributed, and hybrid computation. Familiar with OpenMP and MPI libraries as well as standard threading</li>
+                    <li>Multiple semester Deans List recipient</li>
                 </div>
                 <div class="resume-date text-md-right">
                     <span class="text-primary">Expected graduation in 2023</span>
